patirmoniio correcion